--- a/iOS Final/Books Events/Base.lproj/Main.storyboard
+++ b/iOS Final/Books Events/Base.lproj/Main.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yVM-ao-GcE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="yVM-ao-GcE">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="Oma-RE-gqp">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="feh-he-eVi" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="QSN-KQ-ujb" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fGe-d6-KOu">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -22,7 +22,6 @@
                         <segue destination="yVM-ao-GcE" kind="relationship" relationship="rootViewController" id="dQ2-9g-fUc"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="feh-he-eVi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-306" y="66"/>
         </scene>
@@ -30,6 +29,10 @@
         <scene sceneID="asA-Sc-HgX">
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="yVM-ao-GcE" customClass="BooksEventsViewController" customModule="Books_Events" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G3i-UH-0bc"/>
+                        <viewControllerLayoutGuide type="bottom" id="HDH-r6-aY7"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="dvc-9e-HtK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -38,7 +41,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="booksEventsCell" id="SFF-lK-6ze">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="booksEventsCell" id="SFF-lK-6ze" customClass="BooksEventTableViewCell" customModule="Books_Events" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SFF-lK-6ze" id="Asj-lG-Vjn">
@@ -77,6 +80,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="bookIconImageView" destination="k5Z-qy-Oy1" id="Zhq-Ku-Gob"/>
+                                            <outlet property="dateLabel" destination="hez-HK-MDH" id="IQG-Qy-h8s"/>
+                                            <outlet property="titleLabel" destination="fUU-Ct-YhO" id="cLN-I7-c5e"/>
                                             <segue destination="8Ft-n8-TW0" kind="show" id="eOY-2T-xcm"/>
                                         </connections>
                                     </tableViewCell>
@@ -89,14 +95,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="MsL-rf-qca" firstAttribute="trailing" secondItem="N8X-mB-0gU" secondAttribute="trailing" id="4bz-GV-uKR"/>
-                            <constraint firstItem="MsL-rf-qca" firstAttribute="bottom" secondItem="N8X-mB-0gU" secondAttribute="bottom" id="aqL-NE-4aQ"/>
-                            <constraint firstItem="N8X-mB-0gU" firstAttribute="leading" secondItem="MsL-rf-qca" secondAttribute="leading" id="mi8-7y-SAI"/>
-                            <constraint firstItem="N8X-mB-0gU" firstAttribute="top" secondItem="MsL-rf-qca" secondAttribute="top" id="qVs-Mh-T6K"/>
+                            <constraint firstAttribute="trailing" secondItem="N8X-mB-0gU" secondAttribute="trailing" id="4bz-GV-uKR"/>
+                            <constraint firstItem="HDH-r6-aY7" firstAttribute="top" secondItem="N8X-mB-0gU" secondAttribute="bottom" id="aqL-NE-4aQ"/>
+                            <constraint firstItem="N8X-mB-0gU" firstAttribute="leading" secondItem="dvc-9e-HtK" secondAttribute="leading" id="mi8-7y-SAI"/>
+                            <constraint firstItem="N8X-mB-0gU" firstAttribute="top" secondItem="G3i-UH-0bc" secondAttribute="bottom" id="qVs-Mh-T6K"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="MsL-rf-qca"/>
                     </view>
                     <navigationItem key="navigationItem" id="GJ4-x3-bqu"/>
+                    <connections>
+                        <outlet property="booksEventsTableView" destination="N8X-mB-0gU" id="4HO-Rr-f82"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pfp-H9-H3Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -106,6 +114,10 @@
         <scene sceneID="XZP-EL-JD4">
             <objects>
                 <viewController id="8Ft-n8-TW0" customClass="BooksEventsDetailViewController" customModule="Books_Events" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="E12-il-dYj"/>
+                        <viewControllerLayoutGuide type="bottom" id="YjV-QG-PlH"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="0GC-8U-HcT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -130,7 +142,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xdk-3m-9p6">
-                                <rect key="frame" x="90" y="118" width="324" height="30"/>
+                                <rect key="frame" x="90" y="104" width="324" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -138,23 +150,22 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Rnh-f5-W4o" firstAttribute="trailing" secondItem="xdk-3m-9p6" secondAttribute="trailing" id="06X-nk-vFA"/>
+                            <constraint firstAttribute="trailing" secondItem="xdk-3m-9p6" secondAttribute="trailing" id="06X-nk-vFA"/>
                             <constraint firstItem="xdk-3m-9p6" firstAttribute="leading" secondItem="O2y-Pb-O9u" secondAttribute="trailing" constant="20" id="0Bt-QN-LID"/>
-                            <constraint firstItem="O2y-Pb-O9u" firstAttribute="leading" secondItem="Rnh-f5-W4o" secondAttribute="leading" constant="20" id="0fT-23-wkJ"/>
+                            <constraint firstItem="O2y-Pb-O9u" firstAttribute="leading" secondItem="0GC-8U-HcT" secondAttribute="leading" constant="20" id="0fT-23-wkJ"/>
                             <constraint firstItem="p5G-9y-AVm" firstAttribute="top" secondItem="nDS-qw-F8v" secondAttribute="bottom" constant="8" id="I3F-8O-Phh"/>
                             <constraint firstItem="xdk-3m-9p6" firstAttribute="leading" secondItem="O2y-Pb-O9u" secondAttribute="trailing" constant="20" id="IP4-jU-qde"/>
                             <constraint firstItem="p5G-9y-AVm" firstAttribute="top" secondItem="nDS-qw-F8v" secondAttribute="bottom" constant="15" id="Im9-Bc-tam"/>
                             <constraint firstItem="nDS-qw-F8v" firstAttribute="top" secondItem="O2y-Pb-O9u" secondAttribute="bottom" constant="15" id="OS3-hB-Qrx"/>
-                            <constraint firstItem="O2y-Pb-O9u" firstAttribute="top" secondItem="Rnh-f5-W4o" secondAttribute="top" constant="10" id="RAX-AO-3Hp"/>
-                            <constraint firstItem="nDS-qw-F8v" firstAttribute="leading" secondItem="Rnh-f5-W4o" secondAttribute="leading" constant="20" id="Z9X-k3-iNw"/>
+                            <constraint firstItem="O2y-Pb-O9u" firstAttribute="top" secondItem="E12-il-dYj" secondAttribute="bottom" constant="10" id="RAX-AO-3Hp"/>
+                            <constraint firstItem="nDS-qw-F8v" firstAttribute="leading" secondItem="0GC-8U-HcT" secondAttribute="leading" constant="20" id="Z9X-k3-iNw"/>
                             <constraint firstItem="nDS-qw-F8v" firstAttribute="top" secondItem="O2y-Pb-O9u" secondAttribute="bottom" constant="15" id="ayW-eP-F36"/>
                             <constraint firstItem="xdk-3m-9p6" firstAttribute="top" secondItem="O2y-Pb-O9u" secondAttribute="top" id="dRt-gB-r5N"/>
-                            <constraint firstItem="Rnh-f5-W4o" firstAttribute="bottom" secondItem="p5G-9y-AVm" secondAttribute="bottom" id="lBn-Xi-sGS"/>
-                            <constraint firstItem="xdk-3m-9p6" firstAttribute="top" secondItem="Rnh-f5-W4o" secondAttribute="top" constant="30" id="lJI-7a-VBP"/>
-                            <constraint firstItem="Rnh-f5-W4o" firstAttribute="trailing" secondItem="nDS-qw-F8v" secondAttribute="trailing" id="pGR-2i-yj2"/>
-                            <constraint firstItem="O2y-Pb-O9u" firstAttribute="top" secondItem="Rnh-f5-W4o" secondAttribute="top" constant="16" id="pmF-U2-FWw"/>
+                            <constraint firstItem="YjV-QG-PlH" firstAttribute="top" secondItem="p5G-9y-AVm" secondAttribute="bottom" id="lBn-Xi-sGS"/>
+                            <constraint firstItem="xdk-3m-9p6" firstAttribute="top" secondItem="E12-il-dYj" secondAttribute="bottom" constant="30" id="lJI-7a-VBP"/>
+                            <constraint firstAttribute="trailing" secondItem="nDS-qw-F8v" secondAttribute="trailing" id="pGR-2i-yj2"/>
+                            <constraint firstItem="O2y-Pb-O9u" firstAttribute="top" secondItem="E12-il-dYj" secondAttribute="bottom" constant="16" id="pmF-U2-FWw"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Rnh-f5-W4o"/>
                     </view>
                     <connections>
                         <outlet property="bookIconImageView" destination="O2y-Pb-O9u" id="JuU-g1-arV"/>
